Fix button width making a scrollbar show up
 #574

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -1253,7 +1253,7 @@ sxt-annotations-editor {
 
 .btn.btn-default.process-output-button {
   width: auto;
-  padding: 0.35em 1em;
+  padding: 0.35em 0.5em;
 }
 
 .wps-execute-container {
